[MDR-65] Solving the ordering problem by replacing the time stamps for unique IDs